# bevy_assets_bundler

./: .gitignore  .rustfmt.toml  .taplo.toml  .travis.yml  Cargo.toml  README.md  codecov.yml
.github/: dependabot.yml
.github/workflows/: cancel-stale.yml  main.yml
example/: Cargo.toml  build.rs
example/src/: main.rs  mod.rs
src/: lib.rs
src/bundler/: asset_bundler.rs  mod.rs
src/options/: bundled_asset_options.rs  mod.rs
src/plugin/: bundled_asset_io.rs  bundled_asset_options.rs  bundled_asset_plugin.rs  mod.rs  path_info.rs
tests/: bundler.rs  common.rs  e2e.rs  plugin.rs
