[package]
name = "bevy_assets_bundler"
version = "0.3.0"

description = "Assets Bundler for bevy, with content encryption support."

categories = [
  "cryptography",
  "encoding",
  "game-development",
]
keywords = ["bevy", "asset", "assets", "bundler"]

readme = "README.md"
repository = "https://github.com/hanabi1224/bevy_assets_bundler"

edition = "2021"
exclude = [".github", ".vscode", "*.yml"]
license = "MIT"

[workspace]
exclude = []
members = ["example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "encryption",
]

encryption = [
  "aes",
  "block-modes",
]

# compression = ["brotli"]

[dependencies]
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#tilde-requirements
bevy = {version = "~0.8", default-features = false, features=["bevy_asset"] }

anyhow = "1"
bs58 = "0.4"
cfg-if = "1"
tar = "0.4.38"
tracing = "0.1"

# encryption
aes = {version = "0.7", optional = true}
block-modes = {version = "0.8", optional = true}

# compression
# brotli = {version = "3.3", optional = true}

[dev-dependencies]
futures-lite = "1"
rand = "0"
uuid = { version = "0", features=["v4"] }
