[package]
edition = "2021"
name = "example"
version = "0.1.0"

publish = false

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}

futures-lite = "1"
lazy_static = "1"
rand = "0"

bevy_assets_bundler = {path = "../"}

[dev-dependencies]

[build-dependencies]
bevy_assets_bundler = {path = "../"}
lazy_static = "1"
