[package]
edition = "2021"
name = "example"
version = "0.1.0"

publish = false

[dependencies]
bevy = { workspace = true, features = ["default"] }
lazy_static = "1"

bevy_assets_bundler = { path = "../" }

[dev-dependencies]

[build-dependencies]
bevy_assets_bundler = { path = "../" }
lazy_static = "1"

[profile.release]
strip = true
